versions/0.8.2/_sources/refs/_aws-cdk_aws-eks.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"ESR7Hq4J7dkTM/bvMUVDd2OG0Bl8rP5ha0h2DWu7sv8="}

@aws-cdk/aws-eks
================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/eks/0.8.2/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:eks:jar:0.8.2'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="eks" rev="0.8.2"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>eks</artifactId>
           <version>0.8.2</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:eks:0.8.2'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='eks', version='0.8.2')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-eks/v/0.8.2>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-eks@0.8.2

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-eks": "^0.8.2"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-eks@0.8.2


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-eks/v/0.8.2>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-eks@0.8.2

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-eks": "^0.8.2"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-eks@0.8.2



.. mdinclude:: ./__aws-cdk_aws-eks.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-eks

ClusterArn
^^^^^^^^^^

.. py:class:: ClusterArn([valueOrFunction, [displayName]])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.eks.ClusterArn;

      .. code-tab:: javascript

         const { ClusterArn } = require('@aws-cdk/aws-eks');

      .. code-tab:: typescript

         import { ClusterArn } from '@aws-cdk/aws-eks';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any or undefined
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ClusterCertificateAuthorityData
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ClusterCertificateAuthorityData([valueOrFunction, [displayName]])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.eks.ClusterCertificateAuthorityData;

      .. code-tab:: javascript

         const { ClusterCertificateAuthorityData } = require('@aws-cdk/aws-eks');

      .. code-tab:: typescript

         import { ClusterCertificateAuthorityData } from '@aws-cdk/aws-eks';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any or undefined
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ClusterEndpoint
^^^^^^^^^^^^^^^

.. py:class:: ClusterEndpoint([valueOrFunction, [displayName]])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.eks.ClusterEndpoint;

      .. code-tab:: javascript

         const { ClusterEndpoint } = require('@aws-cdk/aws-eks');

      .. code-tab:: typescript

         import { ClusterEndpoint } from '@aws-cdk/aws-eks';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any or undefined
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-eks.cloudformation

ClusterResource
~~~~~~~~~~~~~~~

.. py:class:: ClusterResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.eks.cloudformation.ClusterResource;

      .. code-tab:: javascript

         const { cloudformation.ClusterResource } = require('@aws-cdk/aws-eks');

      .. code-tab:: typescript

         import { cloudformation.ClusterResource } from '@aws-cdk/aws-eks';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ClusterResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ClusterResource``
   :type properties: :py:class:`~@aws-cdk/aws-eks.cloudformation.ClusterResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: clusterArn

      :type: :py:class:`~@aws-cdk/aws-eks.ClusterArn` *(readonly)*


   .. py:attribute:: clusterCertificateAuthorityData

      :type: :py:class:`~@aws-cdk/aws-eks.ClusterCertificateAuthorityData` *(readonly)*


   .. py:attribute:: clusterEndpoint

      :type: :py:class:`~@aws-cdk/aws-eks.ClusterEndpoint` *(readonly)*

   .. py:class:: ResourcesVpcConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.eks.cloudformation.ClusterResource.ResourcesVpcConfigProperty;

         .. code-tab:: javascript

            // cloudformation.ClusterResource.ResourcesVpcConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ClusterResource.ResourcesVpcConfigProperty } from '@aws-cdk/aws-eks';





      .. py:attribute:: securityGroupIds

         ``ClusterResource.ResourcesVpcConfigProperty.SecurityGroupIds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-eks-cluster-resourcesvpcconfig.html#cfn-eks-cluster-resourcesvpcconfig-securitygroupids


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: subnetIds

         ``ClusterResource.ResourcesVpcConfigProperty.SubnetIds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-eks-cluster-resourcesvpcconfig.html#cfn-eks-cluster-resourcesvpcconfig-subnetids


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`



ClusterResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ClusterResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.eks.cloudformation.ClusterResourceProps;

      .. code-tab:: javascript

         // cloudformation.ClusterResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ClusterResourceProps } from '@aws-cdk/aws-eks';





   .. py:attribute:: resourcesVpcConfig

      ``AWS::EKS::Cluster.ResourcesVpcConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-eks-cluster.html#cfn-eks-cluster-resourcesvpcconfig


      :type: :py:class:`~@aws-cdk/aws-eks.cloudformation.ClusterResource.ResourcesVpcConfigProperty` or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: roleArn

      ``AWS::EKS::Cluster.RoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-eks-cluster.html#cfn-eks-cluster-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: clusterName

      ``AWS::EKS::Cluster.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-eks-cluster.html#cfn-eks-cluster-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: version

      ``AWS::EKS::Cluster.Version``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-eks-cluster.html#cfn-eks-cluster-version


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-eks

